<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_mynanodegreeapps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/activity_main_btn_spotify"
        style="@style/BtnNanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:onClick="onClick"
        android:layout_marginTop="20dp"
        android:text="@string/app_spotify" />

    <Button
        android:id="@+id/activity_main_btn_score"
        style="@style/BtnNanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_btn_spotify"
        android:onClick="onClick"
        android:text="@string/app_score" />

    <Button
        android:id="@+id/activity_main_btn_library"
        style="@style/BtnNanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_btn_score"
        android:onClick="onClick"
        android:text="@string/app_library" />

    <Button
        android:id="@+id/activity_main_btn_build"
        style="@style/BtnNanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_btn_library"
        android:onClick="onClick"
        android:text="@string/app_builditbigger" />

    <Button
        android:id="@+id/activity_main_btn_reader"
        style="@style/BtnNanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_btn_build"
        android:onClick="onClick"
        android:text="@string/app_reader" />

    <Button
        android:id="@+id/activity_main_btn_capstone"
        style="@style/BtnNanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_btn_reader"
        android:background="@color/colorAccent"
        android:text="@string/app_capstone"
        android:onClick="onClick"
        android:textColor="@android:color/white" />

</RelativeLayout>
